<resources>
    <string name="app_title">SQLite_DiabetesApp</string>
    <string name="title_home">Hallo, User!</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="errorMessage">Bitte füllen sie beide Felder aus</string>
    <string name="deineDaten">Deine Daten im Überblick</string>
    <string name="string_pw">Passwort</string>
    <string name="string_user">Benutzer</string>
    <string name="string_reg">Registrieren</string>
    <string name="string_login">Log In</string>
    <string name="app_name">Sting</string>
    <string name="string_welcome">Herzlich Willkommen!</string>
    <string name="string_letsgo">Auf gehts!</string>
    <string name="title_activity_starting_page">Sting - Dein Blutzucker Tagebuch</string>
    <string name="bar_start">Start</string>
    <string name="bar_table">Tabelle</string>
    <string name="bar_graph">Graph</string>
    <string name="wrongLogIn">Benutzername oder Passwort falsch!</string>
    <string name="string_retypePw">Passwort bestätigen:</string>
    <string name="string_typePw">Bitte wähle ein Passwort:</string>
    <string name="string_typeUserName">Bitte wähle einen Benutzernamen:</string>
    <string name="title_activity_registrate">Registrierung</string>
    <string name="errorMessageSecPw">Die Passwörter stimmer nicht überein!</string>
    <string name="howRU_mes">Wie geht es dir?</string>
    <string name="gefuehl">Dokumentiere dein Befinden</string>
    <string name="Blutzucker">Dein Blutzuckerwert</string>
    <string name="date">Datum / Uhrzeit</string>
    <string name="blutzucker">Blutzuckerwert</string>
    <string name="welcomeMes">Hey, </string>
    <string name="eingabe">Eingabe</string>
    <string name="title_activity_tableView">Deine Übersicht</string>
    <string name="title_activity_graphView">Deine Übersicht</string>
</resources>
