<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/front_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/sting" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_user"
        android:drawableLeft="@drawable/user"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"/>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_pw"
        android:drawableLeft="@drawable/lock"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="5dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_login"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="5dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/button_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_reg"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"/>

</LinearLayout>