<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tableView">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="295dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/deineDaten"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Deine Daten im Überblick" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="334dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TableRow android:padding="10dip">

            <TextView
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:padding="10dip"
                android:text="@string/date" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dip"
                android:text="@string/blutzucker" />

        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="02.02.18" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="100 dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="Hi" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="100 dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="Hi" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="100 dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="Hi" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="100 dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="Hi" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="100 dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="Hi" />

            <TextView
                android:gravity="end"
                android:padding="3dip"
                android:text="110 dp" />
        </TableRow>
    </TableLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="44dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="267dp" />
</android.support.constraint.ConstraintLayout>